--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,49 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
+# macOS
 .DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
 
-# IntelliJ related
+# VS Code
+.vscode/
+
+# IntelliJ / Android Studio
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter / Dart / Pub
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
-/build/
+build/
+.migrate_working_dir/
+.metadata
 
-# Symbolication related
-app.*.symbols
+# iOS
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/.last_build_id
 
-# Obfuscation related
-app.*.map.json
+# Android
+android/app/debug
+android/app/profile
+android/app/release
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Tests / Coverage
+coverage/
+
+# Logs, backups, etc.
+*.log
+*.tmp
+*.bak
+*.lock
+*.swp
+*.class
+*.pyc
+
+# Autres outils
+.history
+.atom/
+.svn/
